--- a/css/home_page.css
+++ b/css/home_page.css
@@ -8,6 +8,11 @@
     src: url("../res/fonts/MyriadPro-Semibold.otf");
 }
 
+@font-face {
+    font-family: Arial-Regular;
+    src: url("../res/fonts/ArialRegular.ttf");
+}
+
 body {
     background: #fbfbfb;
 }
@@ -213,10 +218,10 @@ footer {
     justify-content: space-around;
     background: #fff;
     flex: 1;
-    min-width: 75px;
+    min-width: 69px;
     height: 68px;
     margin-bottom: 5px;
-    margin-right: 5px;
+    margin-right: 5%;
     border: 1px solid #ededed;
 }
 
@@ -231,8 +236,46 @@ footer {
     font-size: 26px;
 }
 
+.submenu_item:first-of-type {
+    background: #555;
+}
+
+.submenu_item:first-of-type .text,
+.submenu_item:first-of-type span {
+    color: #fff;
+}
+
 .main_slider {
     flex: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0 3%;
+}
+
+.filter {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.filter div {
+    background: #fff;
+    flex: 1;
+    max-width: 15%;
+    height: 28px;
+    line-height: 28px;
+    text-align: center;
+    margin-bottom: 5px;
+    border: 1px solid #ededed;
+    font-family: Arial-Regular;
+    font-size: 12px;
+    color: #555;
+}
+
+.filter div:first-of-type {
+    background: #555;
+    color: #fff;
 }
 
 .reports {
