--- a/css/home_page.css
+++ b/css/home_page.css
@@ -266,6 +266,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     height: 100%;
+    margin-bottom: 10px;
 }
 
 .filter div {
@@ -290,37 +291,31 @@ footer {
 
 /*Slider*/
 
-.slider {
-    flex: 1;
-    width: 100%;
-}
-
 .slider img {
     width: 100%;
     height: auto;
-    position: relative;
 }
 
 .slider_caption {
-    position: absolute;
     background: #fff;
-    margin: -50px 0px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    width: 48.6%;
+    margin-top: -5px;
 }
 
 .slider_caption_text {
-    flex: 10;
-    padding: 5px;
+    flex: 8;
+    padding: 10px;
     padding-left: 3%;
     border: 1px solid #ededed;
+    color: #555;
 }
 
 .slider_caption_text h4 {
     margin: auto;
     font-family: MyriadPro-Semibold;
+    margin-bottom: 1%;
 }
 
 .slider_caption_text p {
@@ -339,8 +334,8 @@ footer {
 .pause {
     display: flex;
     justify-content: center;
-    height: 35%;
-    margin: 15px 10px;
+    height: 30%;
+    margin: 20px 10px;
 }
 
 .pause div {
