--- a/css/home_page.css
+++ b/css/home_page.css
@@ -291,6 +291,16 @@ footer {
 
 /*Slider*/
 
+.slider {
+    margin-bottom: 13px;
+}
+
+.slider .pagination {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
 .slider img {
     width: 100%;
     height: auto;
@@ -345,6 +355,65 @@ footer {
 
 .pause .white {
     background: #fff;
+}
+
+
+/*Latest News filter*/
+
+.latest_news {
+    background: #fff;
+    border: 1px solid #ededed;
+    font-family: MyriadPro-Semibold;
+    font-size: 12px;
+    line-height: 28px;
+    color: #555;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.latest_news .icon {
+    font-size: 18px;
+    padding-left: 2%;
+    margin-right: -5%;
+    flex: 1;
+}
+
+.latest_news .text {
+    flex: 2;
+    margin-right: -3%;
+}
+
+.latest_news .strip {
+    background: #ddd;
+    width: 1px;
+    height: 20px;
+    align-self: center;
+    margin-right: 7%;
+}
+
+.latest_news .recent {
+    flex: 5;
+    color: #ddd;
+}
+
+.latest_news .view_type {
+    flex: 2;
+    display: flex;
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+}
+
+.list_view {
+    flex: 1;
+    background: #fdcc05;
+    margin-left: 20%;
+}
+
+.table_view {
+    flex: 1;
+    background: #555;
 }
 
 .reports {
